--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "axios": "^1.3.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
