--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "axios": "^1.3.0",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vue-router": "^4.0.0",
