--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -16,6 +16,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vue-router": "^4.0.0",
+    "vue3-easy-data-table": "^1.5.34",
     "vue3-google-oauth2": "^1.0.6",
     "vue3-otp-input": "^0.3.6",
     "vuetify": "^3.0.0",
