--- a/BackEnd/HocTiengAnh/HocTiengAnh.csproj
+++ b/BackEnd/HocTiengAnh/HocTiengAnh.csproj
@@ -166,6 +166,8 @@
     <Compile Include="Controllers\ForgotPassword\VerifyOTPCodeController.cs" />
     <Compile Include="Controllers\Login\GetDataUserByIDController.cs" />
     <Compile Include="Controllers\Login\LoginController.cs" />
+    <Compile Include="Controllers\Manage Class\DeleteClassByIDController.cs" />
+    <Compile Include="Controllers\Manage Class\SelectAllFacultyController.cs" />
     <Compile Include="Controllers\Manage Class\ShowAllClassController.cs" />
     <Compile Include="Controllers\SelectTuVungByTopicIDController.cs" />
     <Compile Include="Controllers\Topic\ShowTopicByFacultyController.cs" />
