Handle Show Teacher Name when select Faculty

--- a/BackEnd/HocTiengAnh/HocTiengAnh.csproj
+++ b/BackEnd/HocTiengAnh/HocTiengAnh.csproj
@@ -169,6 +169,8 @@
     <Compile Include="Controllers\Manage Class\DeleteClassByIDController.cs" />
     <Compile Include="Controllers\Manage Class\SelectAllFacultyController.cs" />
     <Compile Include="Controllers\Manage Class\ShowAllClassController.cs" />
+    <Compile Include="Controllers\Manage Class\ShowTeacherByFacultyController.cs" />
+    <Compile Include="Controllers\MethodGetDataNoParamsController.cs" />
     <Compile Include="Controllers\SelectTuVungByTopicIDController.cs" />
     <Compile Include="Controllers\Topic\ShowTopicByFacultyController.cs" />
     <Compile Include="Controllers\Topic\SelectAllTopicController.cs" />
