--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -12,7 +12,9 @@
     "@emailjs/browser": "^3.10.0",
     "axios": "^1.3.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.35",
     "mitt": "^3.0.0",
+    "primevue": "^3.23.0",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vue-router": "^4.0.0",
