--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -23,7 +23,8 @@
     "vue3-otp-input": "^0.3.6",
     "vuetify": "^3.0.0",
     "vuex": "^4.1.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
