Handle add excel vocab to database

--- a/BackEnd/HocTiengAnh/HocTiengAnh.csproj
+++ b/BackEnd/HocTiengAnh/HocTiengAnh.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Models\SachModel.cs" />
     <Compile Include="Models\TopicModel.cs" />
     <Compile Include="Models\UsersModel.cs" />
+    <Compile Include="Models\WordModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
