--- a/BackEnd/HocTiengAnh/HocTiengAnh.csproj
+++ b/BackEnd/HocTiengAnh/HocTiengAnh.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ConfirmPassword\ConfirmPasswordController.cs" />
     <Compile Include="Controllers\ForgotPassword\GenerateOTPForEmailController.cs" />
     <Compile Include="Controllers\ForgotPassword\ValidEmailController.cs" />
     <Compile Include="Controllers\ForgotPassword\VerifyOTPCodeController.cs" />
