--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "sass": "^1.55.0",
     "vite": "^3.1.9",
+    "vite-plugin-mkcert": "^1.14.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.12"
   }
 }
