--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "axios": "^1.3.0",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "element-plus": "^2.2.35",
     "md5": "^2.3.0",
     "mitt": "^3.0.0",
