update color button and search

--- a/BackEnd/HocTiengAnh/HocTiengAnh.csproj
+++ b/BackEnd/HocTiengAnh/HocTiengAnh.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Controllers\ManageTopic\ManageTopicController.cs" />
     <Compile Include="Controllers\NewGiaoVienForm\NewGiaoVienFormController.cs" />
     <Compile Include="Controllers\NewUserForm\NewUserFormController.cs" />
+    <Compile Include="Controllers\ReviewWord\ReviewWordController.cs" />
     <Compile Include="Controllers\SelectTuVungByTopicIDController.cs" />
     <Compile Include="Controllers\SettingAccount\SettingAccountController.cs" />
     <Compile Include="Controllers\Topic\ShowTopicByFacultyController.cs" />
