--- a/BackEnd/HocTiengAnh/HocTiengAnh.csproj
+++ b/BackEnd/HocTiengAnh/HocTiengAnh.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Controllers\ChooseRightMeaning\ChooseRightMeaningController.cs" />
     <Compile Include="Controllers\ConfirmPassword\ConfirmPasswordController.cs" />
     <Compile Include="Controllers\DetailClass\DetailClassController.cs" />
+    <Compile Include="Controllers\DetailPersonalVocab\DetailPersonalVocabController.cs" />
     <Compile Include="Controllers\DetailVocab\DetailVocabController.cs" />
     <Compile Include="Controllers\ForgotPassword\GenerateOTPForEmailController.cs" />
     <Compile Include="Controllers\ForgotPassword\ValidEmailController.cs" />
@@ -178,6 +179,7 @@
     <Compile Include="Controllers\Manage Class\ShowAllClassController.cs" />
     <Compile Include="Controllers\Manage Class\ShowTeacherByFacultyController.cs" />
     <Compile Include="Controllers\Manage Users\ManageUsersController.cs" />
+    <Compile Include="Controllers\ManagePersonalVocab\ManagePersonalVocabController.cs" />
     <Compile Include="Controllers\ManageTopic\ManageTopicController.cs" />
     <Compile Include="Controllers\NewGiaoVienForm\NewGiaoVienFormController.cs" />
     <Compile Include="Controllers\NewUserForm\NewUserFormController.cs" />
