--- a/tudienchuyennganh/package.json
+++ b/tudienchuyennganh/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.35",
+    "js-cookie": "^3.0.5",
     "mitt": "^3.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
